--- a/assets/style.css
+++ b/assets/style.css
@@ -23,6 +23,7 @@ h1 {
 
 header p {
     font-size: 125%;
+    line-height: 1.2;
 }
 
 main {
@@ -32,8 +33,9 @@ main {
 }
 
 .columns {
-    display:inline-flex;
+    display:flex;
     flex-wrap: wrap;
+    margin: 10px;
 }
 
 footer {
@@ -47,7 +49,13 @@ footer {
     border:var(--border-solid);
     display: flex;
     flex-flow: column wrap;
-    flex: 1 0 100%
+    flex: 1 0 100%;
+    padding: 10px;
+    line-height: 1.1;
+}
+
+pre {
+    padding: 10px;
 }
 
 @media screen and (min-width: 786px) {
