--- a/assets/style.css
+++ b/assets/style.css
@@ -1,2 +1,79 @@
+:root {
+    --highlight: #a0f750;
+    --dark: #393a22;
+    --light: #7297e7;
+    --text: #ffffff;
+}
 
+body {
+    background-color: var(--dark);
+    color: var(--text);
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.2;
+}
+
+h1,
+h2,
+h3 {
+    color: var(--light);
+    line-height: 1.2;
+}
+
+h1 {
+    font-size: 250%;
+}
+
+h2 {
+    font-size: 175%;
+}
+
+h3 {
+    font-size: 150%;
+}
+
+code {
+    font-family: monospace;
+}
+
+header {
+    text-align: center;
+    padding: 10px;
+    width: 96%;
+}
+
+main {
+    width: 96%;
+    margin: 10px auto;
+}
+
+footer {
+    width: 96%;
+    text-align: center;
+    margin: 10px;
+}
+
+.row {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+.columns {
+    flex: 1 0 100%;
+    transition: flex-basis 500ms linear;
+}
+
+.code-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    min-height: 100%;
+    outline: 2px dashed var(--text);
+}
+
+.code-box h2 {
+    border: 1px solid var(--text);
+    margin: -20px 0 10px 0;
+    border-radius: 10px;
+}
 
