--- a/assets/style.css
+++ b/assets/style.css
@@ -88,10 +88,7 @@ pre {
     border-radius: 10px;
     background-image: linear-gradient(
         rgba(114, 151, 231, 0.2) 0%,
-        rgba(114, 151, 231, 0.7) 100%
-    );
-    display: flex;
-    align-items: center;
+        rgba(114, 151, 231, 0.7) 100%);
     margin: 20px;
     padding: 15px;
 }
